# visc

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  visc.default.ini
.insforge/: project.json
src/: app.c  app.h  audio.c  audio.h  audio_loopback.cpp  audio_loopback.h  config.c  config.h  fft.c  fft.h  image_loader.cpp  image_loader.h  main.c  stats.c  stats.h  themes.c  themes.h  ui.cpp  ui.h  visualizer.c  visualizer.h  window.c  window.h
